<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/white"
    android:layout_gravity="bottom"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/call_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/call" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_info_tab_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/info_place" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reviews_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviews"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/reviews"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sorting_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/sorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_sorting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sorting"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/sorting" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cart_empty_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/cart_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_empty"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/cart" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cart_tab"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_menu_bucket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="105"
            android:textColor="@color/colorPrimary"
            android:textSize="9sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/cart" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tracking_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_track_tab_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tracking"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/ColorGrey"
            android:text="@string/tracking" />
    </RelativeLayout>

</LinearLayout>